move joblib to raw_data

--- a/notebooks/mg_pipeline.ipynb
+++ b/notebooks/mg_pipeline.ipynb
@@ -1774,10 +1774,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2021-03-27T14:11:59.807Z"
+     "end_time": "2021-03-27T14:25:22.984222Z",
+     "start_time": "2021-03-27T14:15:47.345011Z"
     }
    },
    "outputs": [],
@@ -1795,26 +1796,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2021-03-27T14:11:59.811Z"
+     "end_time": "2021-03-27T14:25:23.007782Z",
+     "start_time": "2021-03-27T14:25:22.991585Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'fit_time': array([112.51294446, 111.38282251, 117.37389803, 110.04163146,\n",
+       "        108.72940516]),\n",
+       " 'score_time': array([3.1033988 , 2.86261392, 2.861835  , 3.78913736, 2.71355009]),\n",
+       " 'test_score': array([0.78959293, 0.82421428, 0.94556132, 0.94456949, 0.94506381])}"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cv_results_forest"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2021-03-27T14:11:59.816Z"
+     "end_time": "2021-03-27T14:27:41.508830Z",
+     "start_time": "2021-03-27T14:25:23.012754Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier()"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model_forest.fit(X_resampled, y_resampled)"
    ]
@@ -1828,10 +1856,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2021-03-27T14:11:59.824Z"
+     "end_time": "2021-03-27T14:27:41.521512Z",
+     "start_time": "2021-03-27T14:27:41.512912Z"
     }
    },
    "outputs": [],
@@ -1854,10 +1883,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2021-03-27T14:11:59.828Z"
+     "end_time": "2021-03-27T14:27:41.529907Z",
+     "start_time": "2021-03-27T14:27:41.525744Z"
     }
    },
    "outputs": [],
@@ -1867,10 +1897,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2021-03-27T14:11:59.834Z"
+     "end_time": "2021-03-27T14:27:41.563114Z",
+     "start_time": "2021-03-27T14:27:41.536130Z"
     }
    },
    "outputs": [],
@@ -1887,10 +1918,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2021-03-27T14:11:59.844Z"
+     "end_time": "2021-03-27T14:27:41.611718Z",
+     "start_time": "2021-03-27T14:27:41.571648Z"
     }
    },
    "outputs": [],
@@ -1900,10 +1932,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2021-03-27T14:11:59.852Z"
+     "end_time": "2021-03-27T14:27:41.627977Z",
+     "start_time": "2021-03-27T14:27:41.616724Z"
     }
    },
    "outputs": [],
@@ -1917,10 +1950,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2021-03-27T14:11:59.857Z"
+     "end_time": "2021-03-27T14:27:41.672332Z",
+     "start_time": "2021-03-27T14:27:41.636970Z"
     }
    },
    "outputs": [],
@@ -1949,10 +1983,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2021-03-27T14:11:59.863Z"
+     "end_time": "2021-03-27T14:27:42.943645Z",
+     "start_time": "2021-03-27T14:27:41.677071Z"
     }
    },
    "outputs": [],
@@ -1963,10 +1998,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2021-03-27T14:11:59.869Z"
+     "end_time": "2021-03-27T14:27:42.951730Z",
+     "start_time": "2021-03-27T14:27:42.948057Z"
     }
    },
    "outputs": [],
@@ -1983,10 +2019,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2021-03-27T14:11:59.875Z"
+     "end_time": "2021-03-27T14:27:43.056421Z",
+     "start_time": "2021-03-27T14:27:42.956180Z"
     }
    },
    "outputs": [],
@@ -1997,10 +2034,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2021-03-27T14:11:59.880Z"
+     "end_time": "2021-03-27T14:27:44.618073Z",
+     "start_time": "2021-03-27T14:27:43.060497Z"
     }
    },
    "outputs": [],
@@ -2015,10 +2053,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2021-03-27T14:11:59.884Z"
+     "end_time": "2021-03-27T14:27:46.446331Z",
+     "start_time": "2021-03-27T14:27:44.621868Z"
     }
    },
    "outputs": [],
@@ -2028,13 +2067,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2021-03-27T14:11:59.889Z"
+     "end_time": "2021-03-27T14:27:46.456659Z",
+     "start_time": "2021-03-27T14:27:46.450213Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(200000, 250)"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X_test_p.shape"
    ]
@@ -2048,10 +2099,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2021-03-27T14:11:59.893Z"
+     "end_time": "2021-03-27T14:27:52.885259Z",
+     "start_time": "2021-03-27T14:27:46.461281Z"
     }
    },
    "outputs": [],
@@ -2061,23 +2113,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2021-03-27T14:11:59.898Z"
+     "end_time": "2021-03-27T14:27:52.946914Z",
+     "start_time": "2021-03-27T14:27:52.889005Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    target\n",
+       "id        \n",
+       "5        0\n",
+       "6        0\n",
+       "8        0\n",
+       "9        0\n",
+       "11       0"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y_pred_test.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2021-03-27T14:11:59.905Z"
+     "end_time": "2021-03-27T14:27:53.453892Z",
+     "start_time": "2021-03-27T14:27:52.950701Z"
     }
    },
    "outputs": [],
@@ -2094,13 +2216,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2021-03-27T14:11:59.910Z"
+     "end_time": "2021-03-27T14:27:53.510969Z",
+     "start_time": "2021-03-27T14:27:53.462734Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['../kaggle_challenge_mar/preprocessor.joblib']"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## preprocessor\n",
     "dump(preprocessor, '../kaggle_challenge_mar/preprocessor.joblib')"
@@ -2108,13 +2242,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2021-03-27T14:11:59.914Z"
+     "end_time": "2021-03-27T14:27:58.164911Z",
+     "start_time": "2021-03-27T14:27:53.515302Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['../kaggle_challenge_mar/model_forest.joblib']"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## model\n",
     "dump(model_forest, '../kaggle_challenge_mar/model_forest.joblib')"
@@ -2122,13 +2268,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2021-03-27T14:11:59.918Z"
+     "end_time": "2021-03-27T14:28:12.324084Z",
+     "start_time": "2021-03-27T14:27:58.169229Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier()"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model_forest = load('../kaggle_challenge_mar/model_forest.joblib')\n",
     "model_forest\n"
