debugging streamlit app - now working

--- a/notebooks/mg_pipeline.ipynb
+++ b/notebooks/mg_pipeline.ipynb
@@ -2294,6 +2294,226 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-27T16:44:52.402358Z",
+     "start_time": "2021-03-27T16:44:52.360380Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(['cont0', 'cont2', 'cont3', 'cont8', 'cont10'],\n",
+       " {'cat0': ['A', 'other'],\n",
+       "  'cat1': ['I', 'K', 'other', 'F', 'L', 'H'],\n",
+       "  'cat2': ['A', 'G', 'C', 'other', 'D', 'F', 'Q', 'J'],\n",
+       "  'cat3': ['B', 'A', 'C', 'D', 'other', 'E'],\n",
+       "  'cat4': ['other', 'E', 'H', 'I', 'D', 'F', 'G', 'J'],\n",
+       "  'cat5': ['BI',\n",
+       "   'AB',\n",
+       "   'BU',\n",
+       "   'M',\n",
+       "   'T',\n",
+       "   'K',\n",
+       "   'L',\n",
+       "   'other',\n",
+       "   'BG',\n",
+       "   'CI',\n",
+       "   'N',\n",
+       "   'G',\n",
+       "   'BO',\n",
+       "   'BA',\n",
+       "   'BQ',\n",
+       "   'CA',\n",
+       "   'D',\n",
+       "   'AQ',\n",
+       "   'AW',\n",
+       "   'AL',\n",
+       "   'BK',\n",
+       "   'AT',\n",
+       "   'CL',\n",
+       "   'I',\n",
+       "   'AY',\n",
+       "   'F',\n",
+       "   'R',\n",
+       "   'BC',\n",
+       "   'AE',\n",
+       "   'BV',\n",
+       "   'BS'],\n",
+       "  'cat6': ['A', 'other', 'C', 'I', 'G', 'E', 'M'],\n",
+       "  'cat7': ['S',\n",
+       "   'other',\n",
+       "   'E',\n",
+       "   'Y',\n",
+       "   'G',\n",
+       "   'AV',\n",
+       "   'AF',\n",
+       "   'AK',\n",
+       "   'AH',\n",
+       "   'AN',\n",
+       "   'J',\n",
+       "   'U',\n",
+       "   'AS',\n",
+       "   'F',\n",
+       "   'AI',\n",
+       "   'K',\n",
+       "   'N',\n",
+       "   'AW',\n",
+       "   'A'],\n",
+       "  'cat8': ['Q',\n",
+       "   'AD',\n",
+       "   'BM',\n",
+       "   'Y',\n",
+       "   'other',\n",
+       "   'AE',\n",
+       "   'AX',\n",
+       "   'H',\n",
+       "   'X',\n",
+       "   'L',\n",
+       "   'AT',\n",
+       "   'AF',\n",
+       "   'S',\n",
+       "   'N',\n",
+       "   'AN',\n",
+       "   'BC',\n",
+       "   'AS',\n",
+       "   'K',\n",
+       "   'I',\n",
+       "   'BJ',\n",
+       "   'A',\n",
+       "   'AK',\n",
+       "   'BN'],\n",
+       "  'cat9': ['A', 'F', 'other', 'C', 'E', 'I', 'J', 'N'],\n",
+       "  'cat10': ['LO',\n",
+       "   'HJ',\n",
+       "   'DJ',\n",
+       "   'KV',\n",
+       "   'DP',\n",
+       "   'GE',\n",
+       "   'HQ',\n",
+       "   'HC',\n",
+       "   'EK',\n",
+       "   'GS',\n",
+       "   'HG',\n",
+       "   'BY',\n",
+       "   'HX',\n",
+       "   'JK',\n",
+       "   'other',\n",
+       "   'LM',\n",
+       "   'HK',\n",
+       "   'MD',\n",
+       "   'IG',\n",
+       "   'JG',\n",
+       "   'AN',\n",
+       "   'AD',\n",
+       "   'MC',\n",
+       "   'KW',\n",
+       "   'CK',\n",
+       "   'LF',\n",
+       "   'CS',\n",
+       "   'GK',\n",
+       "   'DC',\n",
+       "   'LB',\n",
+       "   'LN',\n",
+       "   'IK',\n",
+       "   'DF',\n",
+       "   'CB',\n",
+       "   'LY',\n",
+       "   'JW',\n",
+       "   'FI',\n",
+       "   'CR',\n",
+       "   'IE',\n",
+       "   'HB',\n",
+       "   'HV',\n",
+       "   'LI',\n",
+       "   'HL',\n",
+       "   'BF',\n",
+       "   'LU',\n",
+       "   'GI',\n",
+       "   'HA',\n",
+       "   'KB',\n",
+       "   'FP',\n",
+       "   'HN',\n",
+       "   'GC',\n",
+       "   'KC',\n",
+       "   'CU',\n",
+       "   'BC',\n",
+       "   'MB',\n",
+       "   'BL',\n",
+       "   'IA',\n",
+       "   'MJ',\n",
+       "   'FO',\n",
+       "   'V',\n",
+       "   'JT',\n",
+       "   'AU',\n",
+       "   'IO',\n",
+       "   'GQ',\n",
+       "   'CC',\n",
+       "   'JR',\n",
+       "   'BM',\n",
+       "   'HH',\n",
+       "   'AV',\n",
+       "   'I',\n",
+       "   'EV',\n",
+       "   'EQ',\n",
+       "   'LW',\n",
+       "   'FN',\n",
+       "   'AA',\n",
+       "   'IJ',\n",
+       "   'GU',\n",
+       "   'P',\n",
+       "   'JH',\n",
+       "   'R',\n",
+       "   'IX',\n",
+       "   'DY',\n",
+       "   'DI',\n",
+       "   'CD',\n",
+       "   'IV',\n",
+       "   'FS',\n",
+       "   'FR',\n",
+       "   'J',\n",
+       "   'MH',\n",
+       "   'JD',\n",
+       "   'AP',\n",
+       "   'AE',\n",
+       "   'BP',\n",
+       "   'BI',\n",
+       "   'DO',\n",
+       "   'MG',\n",
+       "   'MT',\n",
+       "   'BV',\n",
+       "   'KX',\n",
+       "   'LV',\n",
+       "   'JX',\n",
+       "   'T',\n",
+       "   'EY',\n",
+       "   'JO',\n",
+       "   'HO',\n",
+       "   'FC'],\n",
+       "  'cat11': ['A', 'other'],\n",
+       "  'cat12': ['A', 'other'],\n",
+       "  'cat13': ['A', 'other'],\n",
+       "  'cat14': ['A', 'other'],\n",
+       "  'cat15': ['B', 'D', 'other'],\n",
+       "  'cat16': ['D', 'B', 'other'],\n",
+       "  'cat17': ['D', 'other', 'B'],\n",
+       "  'cat18': ['B', 'other', 'D']})"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from data import feat_drop, uniques\n",
+    "feat_drop, uniques"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
